fixed spacing and margin

--- a/photobooth-app/src/App.css
+++ b/photobooth-app/src/App.css
@@ -7,4 +7,13 @@
 
 body{
     font-family: 'Reemkufi';
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
